--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,15 @@ dependencies:
   flutter_svg: ^2.2.0
   shared_preferences: ^2.5.3
   cached_network_image: ^3.4.1
-  shimmer: ^3.0.0
   firebase_core: ^3.15.2
   firebase_messaging: ^15.2.10
   flutter_local_notifications: ^19.4.0
   url_launcher: ^6.3.2
-  flutter_colorpicker: ^1.1.0
+  flutter_animator: ^3.2.2
+  lottie: ^3.3.1
+  awesome_bottom_bar: ^1.2.4
+  lucide_icons: ^0.257.0
+  
 
 dev_dependencies:
   flutter_test:
