--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   lucide_icons: ^0.257.0
   flutter_native_splash: ^2.4.6
   intl: ^0.20.2
+  flutter_colorpicker: ^1.1.0
   
 
 dev_dependencies:
